crates/solidity/testing/snapshots/bindings_output/libraries/modifiers_scope/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:25]
   │
 2 │   error IndexOutOfBounds();
   │                         ─┬  
   │                          ╰── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:5:28]
   │
 5 │     revert IndexOutOfBounds();
   │                            ─┬  
   │                             ╰── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Lib {
   │         ─┬─  
   │          ╰─── name: 1
 2 │   error IndexOutOfBounds();
   │   ──┬── ────────┬───────  
   │     ╰───────────────────── unresolved
   │                 │         
   │                 ╰───────── name: 2
   │ 
 4 │   modifier test() {
   │            ──┬─  
   │              ╰─── name: 3
 5 │     revert IndexOutOfBounds();
   │     ───┬── ────────┬───────  
   │        ╰───────────────────── ref: built-in
   │                    │         
   │                    ╰───────── name: 4
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭───▶ library Lib {
 2 │ │ │     error IndexOutOfBounds();
   │ │ │   ──────────────┬─────────────  
   │ │ │                 ╰─────────────── definiens: 2
 3 │ │ ╭─▶ 
   ┆ ┆ ┆   
 5 │ │ │       revert IndexOutOfBounds();
   │ │ │   ───────────────┬───────────────  
   │ │ │                  ╰───────────────── definiens: 4
 6 │ │ ├─▶   }
   │ │ │         
   │ │ ╰───────── definiens: 3
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
